Comments added, final test

--- a/.env.sample
+++ b/.env.sample
@@ -4,7 +4,17 @@ APP_HOST = "127.0.0.1"
 APP_ENV = "development"
 APP_PORT = 3000
 APP_DEBUG = false
-APP_CORS_ORIGIN = "*"
 
 # MongoDB related configuration
 MONGODB_URI = 'mongodb://username:password@127.0.0.1:27017/dbname'
+
+# CSV
+CSV_URL = ""
+CSV_PRODUCER_NAME_COLUMN = 2
+CSV_PRODUCER_COUNTRY_COLUMN = 3
+CSV_PRODUCER_REGION_COLUMN = 4
+CSV_PRODUCT_NAME_COLUMN = 1
+CSV_PRODUCT_VINTAGE_COLUMN = 0
+
+# How many lines to read from CSV in one batch
+CSV_BATCH_SIZE = 100
